# soju-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.local.md-example  AGENTS.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.ai/commands/: embed-index.md  import-staging.md  import-verbs.md  import-words-to.md  import-words.md  promote-local.md  translate-words.md
.github/workflows/: build-app.yml  build-docs.yml  pre-commit.yml  publish.yml
.opencode/: opencode.jsonc
apps/web/: .env.example  .prettierignore  package-lock.json  package.json  prettier.config.js  svelte.config.js  vite.config.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: chat-context.test.ts  chat-context.ts  chat-popout.ts  chat.test.ts  chat.ts  config.ts  education-nav.test.ts  education-nav.ts  flashcards.test.ts  flashcards.ts  format-chat-content.test.ts  format-chat-content.ts  nav.ts  practice.test.ts  practice.ts  sanitize-html.test.ts  sanitize-html.ts  staging.test.ts  staging.ts  storage.test.ts  storage.ts  theme.test.ts  theme.ts  tts.test.ts  tts.ts
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
config/: backend.yaml
data/content/: levels.yaml
data/content/grammar/: manifest.yaml
data/content/grammar/patterns/: buteo_kkaji.yaml  cheung.yaml  deul.yaml  do.yaml  dongan.yaml  eolmana.yaml  eonje.yaml  eotteoke.yaml  euro.yaml  geureom.yaml  geureonde.yaml  geurigo.yaml  go_sipeoyo.yaml  hada.yaml  hago.yaml  hajiman.yaml  hante.yaml  hanteseo.yaml  hareo.yaml  hu.yaml  ina.yaml  ji_maseyo.yaml  kkaji.yaml  museun.yaml  mwoeyo_vs_mwo_haeyo.yaml  seyo.yaml  wae.yaml  wae_an.yaml
data/content/practice/: themes.yaml
data/content/registry/: examples.yaml  types.yaml  vocabulary.yaml
data/content/topics/: manifest.yaml  table.yaml
data/content/topics/common/: topic.yaml
data/content/topics/family/: topic.yaml
data/content/topics/numbers/: table.yaml  topic.yaml
data/content/topics/place/: topic.yaml
data/content/topics/time/: topic.yaml
data/content/verbs/: manifest.yaml  table.yaml
data/content/verbs/forms/: future.yaml  past.yaml  present.yaml
data/content/words/: table.yaml
data/schemas/: _defs.schema.json  examples_vocabulary.schema.json  grammar_manifest.schema.json  grammar_pattern.schema.json  practice_themes.schema.json  registry_types.schema.json  registry_vocabulary.schema.json  staging_exercises.schema.json  staging_stories.schema.json  staging_vocabulary.schema.json  topics_manifest.schema.json  topics_table.schema.json  topics_topic.schema.json  verb_manifest.schema.json  verb_table.schema.json  verbs_construction.schema.json  verbs_forms.schema.json  words_table.schema.json
data/staging/: vocabulary-candidates.yaml
docker/: Dockerfile.backend  Dockerfile.validate  Dockerfile.web
docker/nginx/: nginx.conf
docker/piper/: Dockerfile.piper  requirements.txt  server.py
docs/: Makefile  conf.py  make.bat
docs/soju/: cli.rst  development.rst  index.rst
docs/soju/cli/: align.rst  backend.rst  embed-index.rst  fill-examples.rst  fill-verbs.rst  import.rst  index.rst  levels.rst  promote.rst  registry.rst  soju.rst  translate-words.rst  validate-schemas.rst
docs/soju/development/: agents.rst  ai.rst  data-layout.rst  docker.rst  docs.rst  editor.rst  import.rst  index.rst  poe.rst  python.rst  site.rst  static-build.rst  tts.rst  validate.rst
scratch/: README.md
scripts/: docker-build-web.sh  pre-commit-prettier.sh
src/soju/: __init__.py  align.py  conjugate.py  db.py  debug_log.py  fill_examples.py  fill_verbs.py  import_.py  intake.py  korean_levels.py  language_levels.py  local_examples.py  logutil.py  ollama_client.py  promote.py  registry.py  translate_words.py  validate_schemas.py  vocabulary_context.py
src/soju/backend/: __init__.py  app.py  cli.py  config.py  default_config.yaml  example_backend.yaml  services.py
src/soju/backend/abstract/: __init__.py  llm.py  tts.py
src/soju/backend/adapters/: __init__.py
src/soju/base/: __init__.py  contract.py  plugins.py
src/soju/cli/: __init__.py  _common.py  _ollama.py  app.py  embed.py  examples.py  levels.py  promote.py  translate.py  validate.py  verbs.py  words.py
src/soju/core/: __init__.py  config.py  logging.py  models.py  text.py  yaml_io.py
src/soju/languages/: __init__.py  contracts.py  plugins.py
src/soju/levels/: __init__.py
src/soju/llm/: __init__.py  base.py  jsonutil.py  ollama.py
src/soju/prompts/: __init__.py  context.py
src/soju/registry/: __init__.py  examples.py  grammar.py  targets.py  topics.py  types.py  verbs.py  vocabulary.py
src/soju/services/: __init__.py  examples_fill.py  intake.py  keys.py  levels_assign.py  promote.py  translate.py  verbs_fill.py
tests/: conftest.py  constants.py  test_conjugate.py  test_db_paths.py  test_fill_examples_pure.py  test_import_boundaries.py  test_import_promote.py  test_korean_levels.py  test_language_levels.py  test_logutil.py  test_ollama_client.py  test_registry_align.py  test_translate_words_parse.py  test_validate_schemas.py
tests/backend/: test_application_services.py  test_config.py  test_ollama_adapter.py  test_routes.py  test_speech.py  test_tts_adapters.py
tests/base/: test_contract.py
tests/base/english/: test_gloss.py  test_quality.py  test_text.py
tests/cli/: __init__.py  test_cli_errors.py  test_cli_smoke.py
tests/core/: test_config.py  test_logging.py  test_text.py
tests/languages/: test_plugin_contract.py
tests/languages/korean/: test_conjugation.py  test_example_rules.py  test_local_examples.py  test_romanize.py  test_text.py
tests/levels/: test_levels.py
tests/llm/: test_ollama.py
tests/registry/: test_paths.py
tests/services/: test_embeddings.py  test_examples_fill.py  test_intake.py  test_keys.py  test_levels_assign.py  test_promote.py  test_translate.py  test_verbs_fill.py
tests/services/validation/: test_alignment.py  test_registry_checks.py  test_schemas.py
tests/system/: test_llm.py  test_pipeline.py
(+131 files in other folders)
