[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "soju"
description = "Soju (소주) Platform Development Tools"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  { name = "Onur R. Bingol" },
]
keywords = ["korean", "language-learning", "vocabulary", "education"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Education",
]
dependencies = [
  "check-jsonschema>=0.34.0",
  "poethepoet>=0.32.0",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/orbingol/soju-platform"
Repository = "https://github.com/orbingol/soju-platform"
Issues = "https://github.com/orbingol/soju-platform/issues"

[project.scripts]
soju = "soju.cli.app:main"

[dependency-groups]
docs = [
  "sphinx>=8.0",
  "furo>=2024.8.6",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-typer>=0.9.0",
]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=7.1.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/soju/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.uv]
default-groups = ["docs", "dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "system: end-to-end CLI / data-pipeline tests on a temp data tree",
  "llm: requires a reachable Ollama (skipped unless --llm or SOJU_RUN_LLM_TESTS=1)",
]

[tool.coverage.run]
source = ["soju"]
branch = false
omit = ["src/soju/_version.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.doc8]
max-line-length = 180

[tool.ruff]
line-length = 180

[tool.poe.tasks]
validate-schemas = "soju validate-schemas"
validate-align = "soju align"
validate-registry = "soju registry"

[tool.poe.tasks.validate]
help = "Run JSON Schema checks, alignment, and registry validation."
sequence = [
  "validate-schemas",
  "validate-align",
  "validate-registry",
]

[tool.poe.tasks.import-words]
help = "Import words from a text file into a topic (existing words: merge examples only)."
cmd = "soju import words --topic ${topic} --file ${file}"
args = [{ name = "topic", default = "family" }, { name = "file", options = ["-f", "--file"], required = true }]

[tool.poe.tasks.translate-words]
help = "Translate a plain-text word list to JSON via Ollama (pipe to soju import)."
cmd = "soju translate-words --file ${file}"
args = [{ name = "file", options = ["-f", "--file"], required = true }]

[tool.poe.tasks.import-verbs]
help = "Import verbs from JSON on stdin (AI-assisted workflow)."
cmd = "soju import verbs --stdin-json"

[tool.poe.tasks.embed-index]
help = "Build the Ollama embedding cache for Practice retrieval (data/cache/embeddings/)."
cmd = "soju embed-index"

[tool.poe.tasks.validate-docker]
help = "Run validation inside the validate Docker image."
cmd = "docker compose --profile validate run --rm validate"

[tool.poe.tasks.pre-commit]
help = "Run pre-commit hooks on all files."
cmd = "pre-commit run --all-files"

[tool.poe.tasks.lint]
help = "Alias for pre-commit (run hooks on all files)."
ref = "pre-commit"

[tool.poe.tasks.test]
help = "Run Python unit + offline system tests (skips @pytest.mark.llm)."
cmd = "pytest -m \"not llm\""

[tool.poe.tasks.test-unit]
help = "Run Python unit tests only (exclude system and llm)."
cmd = "pytest -m \"not system and not llm\""

[tool.poe.tasks.test-system]
help = "Run offline system tests (CLI pipelines on temp data; skips llm)."
cmd = "pytest -m \"system and not llm\""

[tool.poe.tasks.test-llm]
help = "Run optional LLM system tests (needs Ollama; pass --llm)."
cmd = "pytest -m llm --llm"

[tool.poe.tasks.test-all]
help = "Run unit, offline system, and LLM tests (needs Ollama for @pytest.mark.llm)."
cmd = "pytest --llm"

[tool.poe.tasks.coverage]
help = "Run unit + offline system tests with line coverage for soju."
cmd = "pytest -m \"not llm\" --cov=soju --cov-report=term-missing"

[tool.poe.tasks.docs]
help = "Build Sphinx HTML user guide into docs/_build/html."
cmd = "make clean html"
cwd = "docs"

[tool.poe.tasks.docs-serve]
help = "Build and serve Sphinx docs with live reload."
cmd = "make clean html serve"
cwd = "docs"
